--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,24 +8,16 @@
 
 /* Space out content a bit */
 body {
-    //padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.container {
-    
+    height: 100%;
+    font-family: 'Open Sans', sans-serif;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
+.footer,.header,.marketing {
     padding-left: 15px;
     padding-right: 15px;
 }
 
-
-/* Make the masthead heading the same height as the navigation */
 .header h3 {
     margin-top: 0;
     margin-bottom: 0;
@@ -33,60 +25,32 @@ body {
     //padding-bottom: 19px;
 }
 
-/* Custom page footer */
-.footer {
-    padding-top: 19px;
-    color: #777;
-    border-top: 1px solid #e5e5e5;
-}
-
-.container-narrow > hr {
+.container-narrow>hr {
     margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
 .jumbotron {
     margin-top: 25%;
     text-align: center;
-    background: transparent;
+    background: 0 0;
 }
 
 .jumbotron h1 {
     color: #cbcacc;
-    font-family: "brandon-grotesque";
     font-size: 4em;
 }
 
 .jumbotron .btn {
     background: #040403;
-    font-family: "brandon-grotesque";
-    font-size: 1.4em;
+    font-size: 1.2em;
     padding: 14px 24px;
     border: none;
 }
 
-.credits {
-    text-align: center;
-}
-.credits:hover {
-    color: #cbcacc;
-    -webkit-transition: all .3s ease-in-out .1s;
-    -moz-transition: all .3s ease-in-out .1s;
-    -o-transition: all .3s ease-in-out .1s;
-    transition: all .3s ease-in-out .1s;
-}
 
-.credits p {
-    font-family: "brandon-grotesque";
-    font-size: 1.25em;
-}
 
 #stopped:hover {
     color: #2ba7e8;
-    -webkit-transition: all .3s ease-in-out .1s;
-    -moz-transition: all .3s ease-in-out .1s;
-    -o-transition: all .3s ease-in-out .1s;
-    transition: all .3s ease-in-out .1s;
 }
 
 .show-default > .text-altered { display:none; }
@@ -101,9 +65,44 @@ body {
     margin-top: 28px;
 }
 
+/********* FOOTER *************/
+
+footer {
+    display: block;
+    position: fixed;
+    bottom: 0;
+    margin-top: 50px;
+    width: 100%;
+    height: 60px;
+    background: #040403;
+}
+
+.footer-container {
+    display: block;
+    width: 960px;
+    height: 1.2em;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.credits {
+    text-align: center;
+    padding-top:  6px;
+}
+
+.credits p {
+    margin-bottom: 0;
+    color:#cbcacc;
+    font-family: serif;
+    font-size: 1em;
+}
+
+
+
+
 /*********** VIDEO BACKGROUND ***************/
 .video-container {
-    overflow: visible;
+    overflow: hidden;
 }
 
 #video-background {
@@ -116,56 +115,94 @@ height: auto;
 z-index: -9999;
 }
 
+/***************** ANIMATION ******************/
+
+.fadeIn {
+    opacity:0;
+    -webkit-animation:fadeIn ease-in 1;
+    -moz-animation:fadeIn ease-in 1;
+    -o-animation:fadeIn ease-in 1;
+    animation:fadeIn ease-in 1;
+    -webkit-animation-fill-mode:forwards;
+    -moz-animation-fill-mode:forwards;
+    -o-animation-fill-mode:forwards;
+    animation-fill-mode:forwards;
+    
+    -webkit-animation-duration: 1.2s;
+    -moz-animation-duration: 1.2s;
+    -o-animation-duration: 1.2s;
+    animation-duration: 1.2s;
+}
+@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@-o-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
+/***************** MOBILE *********************/
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
+@media screen and (min-width:768px) {
     .container {
         max-width: 730px;
     }
 
-    /* Remove the padding we set earlier */
-    .header,
-    .marketing,
-    .footer {
+    .footer,.header,.marketing {
         padding-left: 0;
         padding-right: 0;
     }
 
-    /* Space out the masthead */
     .header {
         margin-bottom: 30px;
     }
-    
-    /* Remove the bottom border on the jumbotron for visual effect */
+
     .jumbotron {
-        visibility: hidden;
         border-bottom: 0;
     }
 
-    .jumbotron h1 { font-size: 3.8em; }
+    .jumbotron h1 {
+        font-size: 3.8em;
+    }
 
     .jumbotron .btn {
         font-size: 1.4em;
         padding: 12px 20px;
-        border: none;
+    }
+}
+
+@media screen and (max-device-width:568px) {
+    #video-background {
+        /*hide background video on mobile phones*/
+        display: none; 
+    }
+
+    .jumbotron {
+        margin-top: 4%;
+    }
+
+    .jumbotron h1 {
+        font-size: 1.8em;
+    }
+
+    .jumbotron .btn {
+        font-size: .9em;
+        padding: 8px 12px;
+    }
+
+    body {
+        background: #333;
+    }
+
+    footer {
+        height: 15%;
     }
 
     .credits p {
-        visibility: hidden;
-        font-family: "brandon-grotesque";
-        font-size: 1.8em;
+        font-size: .9em;
     }
 }
-@media screen and (max-device-width: 568px) {
-    #video_background { display: none; }
 
-    .jumbotron {margin-top: 8%; }
-
-    .jumbotron h1 { font-size: 3em; }
-
-    .jumbotron .btn {
-        font-size: 1em;
-        padding: 8px 12px;
-        border: none;
-    }
-    
+@media only screen and (max-width: 767px) and (orientation:landscape) {
+        .twitter {
+            /* footer just gets in the way in landscape view */
+            display: none;
+        }
 }
